# STM32-Clion

./: .gitignore  README.md
Ball_Beam_System/: Ball_Beam_System.ioc  CMakeLists.txt  TUNING_BATTLE_CHECKLIST.md
Ball_Beam_System/Core/Inc/: Serial.h  Servo.h  adc_distance_converter.h  ball_beam_control.h  chassis_api.h  chassis_ctrl.h  chassis_fsm.h  gp2y0a41.h  kinematics.h  main.h  oled.h  pid.h  stm32f1xx_it.h
Ball_Beam_System/Core/Inc/VL53L0X/: vl53l0x.h  vl53l0x_api.h  vl53l0x_api_calibration.h  vl53l0x_api_core.h  vl53l0x_api_ranging.h  vl53l0x_api_strings.h  vl53l0x_def.h  vl53l0x_device.h
Ball_Beam_System/Core/Inc/VL53L0X/platform/: vl53l0x_platform.h
Ball_Beam_System/Core/Src/: Serial.c  Servo.c  adc_distance_converter.c  ball_beam_control.c  chassis_api.c  chassis_ctrl.c  chassis_fsm.c  gp2y0a41.c  i2c.c  kinematics.c  main.c  oled.c  pid.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Ball_Beam_System/Core/Src/VL53L0X/platform/src/: vl53l0x_platform.c
Ball_Beam_System/Core/Src/VL53L0X/src/: vl53l0x.c
Ball_Beam_System/cmake/stm32cubemx/: CMakeLists.txt
